--- a/opendsim-core/models/dev/makefile.inc
+++ b/opendsim-core/models/dev/makefile.inc
@@ -9,8 +9,8 @@ libdsimmodels_la_SOURCES += dev/dev.c \
 		dev/adevuninit.cxx \
 		dev/ddevcreate.c \
 		dev/ddevinit.cxx \
-		dev/ddevstamp.cxx \
-		dev/ddevevent.cxx \
 		dev/ddevconfig.c \
 		dev/ddevreset.cxx \
-		dev/ddevuninit.cxx
+		dev/ddevuninit.cxx \
+		dev/ddevclock.cxx \
+		dev/ddevevent.cxx
