--- a/opendsim-frontend/devices/Makefile
+++ b/opendsim-frontend/devices/Makefile
@@ -158,7 +158,7 @@ PACKAGE_TARNAME = opendsim
 PACKAGE_URL = 
 PACKAGE_VERSION = 0.0.1
 PATH_SEPARATOR = :
-PYTHON = python
+PYTHON = :
 QT_INCLUDES = -IE:/Qt/5.5.1/5.5/mingw492_32/include -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtWidgets -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtGui -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtCore -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtConcurrent -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtSvg -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtXml -IE:/Qt/5.5.1/5.5/mingw492_32/include/QtScript -DQT_DEBUG -DQT_THREAD_SUPPORT -D_REENTRANT -mthreads -DQT_DLL -DUNICODE
 QT_LDFLAGS = -LE:/Qt/5.5.1/5.5/mingw492_32/lib  -mthreads -mwindows
 QT_LIBS = -lQt5Widgets -lQt5Core -lQt5Gui -lQt5Xml -lQt5Concurrent -lQt5Svg -lQt5Script
