--- a/opendsim-core/models/Makefile.in
+++ b/opendsim-core/models/Makefile.in
@@ -141,11 +141,13 @@ am_libdsimmodels_la_OBJECTS = libdsimmodels_la-register.lo \
 	libdsimmodels_la-dbuffuninit.lo libdsimmodels_la-dmcuavr.lo \
 	libdsimmodels_la-dmcuavrcreate.lo \
 	libdsimmodels_la-dmcuavrinit.lo \
-	libdsimmodels_la-dmcuavrevent.lo \
+	libdsimmodels_la-dmcuavrstamp.lo \
+	libdsimmodels_la-dmcuavrvchanged.lo \
 	libdsimmodels_la-dmcuavrconfig.lo \
 	libdsimmodels_la-dmcuavrreset.lo \
 	libdsimmodels_la-dmcuavruninit.lo \
 	libdsimmodels_la-dmcuavrclock.lo \
+	libdsimmodels_la-dmcuavrevent.lo \
 	libdsimmodels_la-dmcuavrmmcus.lo \
 	libdsimmodels_la-sim_mega128.lo \
 	libdsimmodels_la-sim_mega16m1.lo libdsimmodels_la-sim_mega8.lo \
@@ -197,9 +199,9 @@ am_libdsimmodels_la_OBJECTS = libdsimmodels_la-register.lo \
 	libdsimmodels_la-adevvchanged.lo \
 	libdsimmodels_la-adevconfig.lo libdsimmodels_la-adevreset.lo \
 	libdsimmodels_la-adevuninit.lo libdsimmodels_la-ddevcreate.lo \
-	libdsimmodels_la-ddevinit.lo libdsimmodels_la-ddevstamp.lo \
-	libdsimmodels_la-ddevevent.lo libdsimmodels_la-ddevconfig.lo \
+	libdsimmodels_la-ddevinit.lo libdsimmodels_la-ddevconfig.lo \
 	libdsimmodels_la-ddevreset.lo libdsimmodels_la-ddevuninit.lo \
+	libdsimmodels_la-ddevclock.lo libdsimmodels_la-ddevevent.lo \
 	libdsimmodels_la-mdel-parameter.lo \
 	libdsimmodels_la-mdel-lib.lo
 libdsimmodels_la_OBJECTS = $(am_libdsimmodels_la_OBJECTS)
@@ -389,9 +391,10 @@ libdsimmodels_la_SOURCES = register/register.c \
 	d-buff/d-buff.c d-buff/dbuffcreate.c d-buff/dbuffinit.c \
 	d-buff/dbuffevent.c d-buff/dbuffconfig.c d-buff/dbuffuninit.c \
 	d-mcu-avr/dmcuavr.c d-mcu-avr/dmcuavrcreate.c \
-	d-mcu-avr/dmcuavrinit.c d-mcu-avr/dmcuavrevent.c \
-	d-mcu-avr/dmcuavrconfig.c d-mcu-avr/dmcuavrreset.c \
-	d-mcu-avr/dmcuavruninit.c d-mcu-avr/dmcuavrclock.c \
+	d-mcu-avr/dmcuavrinit.c d-mcu-avr/dmcuavrstamp.c \
+	d-mcu-avr/dmcuavrvchanged.c d-mcu-avr/dmcuavrconfig.c \
+	d-mcu-avr/dmcuavrreset.c d-mcu-avr/dmcuavruninit.c \
+	d-mcu-avr/dmcuavrclock.c d-mcu-avr/dmcuavrevent.c \
 	d-mcu-avr/dmcuavrmmcus.c \
 	d-mcu-avr/thirdparty/cores/sim_mega128.c \
 	d-mcu-avr/thirdparty/cores/sim_mega16m1.c \
@@ -461,9 +464,9 @@ libdsimmodels_la_SOURCES = register/register.c \
 	d-mcu-avr/thirdparty/sim/sim_io.c dev/dev.c dev/adevcreate.c \
 	dev/adevinit.cxx dev/adevstamp.cxx dev/adevvchanged.cxx \
 	dev/adevconfig.c dev/adevreset.cxx dev/adevuninit.cxx \
-	dev/ddevcreate.c dev/ddevinit.cxx dev/ddevstamp.cxx \
-	dev/ddevevent.cxx dev/ddevconfig.c dev/ddevreset.cxx \
-	dev/ddevuninit.cxx mdel-parameter.c mdel-lib.c
+	dev/ddevcreate.c dev/ddevinit.cxx dev/ddevconfig.c \
+	dev/ddevreset.cxx dev/ddevuninit.cxx dev/ddevclock.cxx \
+	dev/ddevevent.cxx mdel-parameter.c mdel-lib.c
 libdsimmodels_la_LIBADD = $(LIBELF_LIBS) $(LIBSOCKET_LD)
 libdsimmodels_la_CFLAGS = -Wno-unused-function
 libdsimmodels_la_CPPFLAGS = -Wno-unused-function
@@ -595,12 +598,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dbuffevent.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dbuffinit.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dbuffuninit.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevclock.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevconfig.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevcreate.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevevent.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevinit.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevreset.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevstamp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-ddevuninit.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dev.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-diode.Plo@am__quote@
@@ -618,7 +621,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dmcuavrinit.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dmcuavrmmcus.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dmcuavrreset.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dmcuavrstamp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dmcuavruninit.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-dmcuavrvchanged.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-inductor.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-inductorconfig.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libdsimmodels_la-inductorcreate.Plo@am__quote@
@@ -1359,12 +1364,19 @@ libdsimmodels_la-dmcuavrinit.lo: d-mcu-avr/dmcuavrinit.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -c -o libdsimmodels_la-dmcuavrinit.lo `test -f 'd-mcu-avr/dmcuavrinit.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrinit.c
 
-libdsimmodels_la-dmcuavrevent.lo: d-mcu-avr/dmcuavrevent.c
-@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -MT libdsimmodels_la-dmcuavrevent.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Tpo" -c -o libdsimmodels_la-dmcuavrevent.lo `test -f 'd-mcu-avr/dmcuavrevent.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrevent.c; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Tpo" "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='d-mcu-avr/dmcuavrevent.c' object='libdsimmodels_la-dmcuavrevent.lo' libtool=yes @AMDEPBACKSLASH@
+libdsimmodels_la-dmcuavrstamp.lo: d-mcu-avr/dmcuavrstamp.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -MT libdsimmodels_la-dmcuavrstamp.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-dmcuavrstamp.Tpo" -c -o libdsimmodels_la-dmcuavrstamp.lo `test -f 'd-mcu-avr/dmcuavrstamp.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrstamp.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-dmcuavrstamp.Tpo" "$(DEPDIR)/libdsimmodels_la-dmcuavrstamp.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-dmcuavrstamp.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='d-mcu-avr/dmcuavrstamp.c' object='libdsimmodels_la-dmcuavrstamp.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -c -o libdsimmodels_la-dmcuavrevent.lo `test -f 'd-mcu-avr/dmcuavrevent.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrevent.c
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -c -o libdsimmodels_la-dmcuavrstamp.lo `test -f 'd-mcu-avr/dmcuavrstamp.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrstamp.c
+
+libdsimmodels_la-dmcuavrvchanged.lo: d-mcu-avr/dmcuavrvchanged.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -MT libdsimmodels_la-dmcuavrvchanged.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-dmcuavrvchanged.Tpo" -c -o libdsimmodels_la-dmcuavrvchanged.lo `test -f 'd-mcu-avr/dmcuavrvchanged.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrvchanged.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-dmcuavrvchanged.Tpo" "$(DEPDIR)/libdsimmodels_la-dmcuavrvchanged.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-dmcuavrvchanged.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='d-mcu-avr/dmcuavrvchanged.c' object='libdsimmodels_la-dmcuavrvchanged.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -c -o libdsimmodels_la-dmcuavrvchanged.lo `test -f 'd-mcu-avr/dmcuavrvchanged.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrvchanged.c
 
 libdsimmodels_la-dmcuavrconfig.lo: d-mcu-avr/dmcuavrconfig.c
 @am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -MT libdsimmodels_la-dmcuavrconfig.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-dmcuavrconfig.Tpo" -c -o libdsimmodels_la-dmcuavrconfig.lo `test -f 'd-mcu-avr/dmcuavrconfig.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrconfig.c; \
@@ -1393,6 +1405,13 @@ libdsimmodels_la-dmcuavrclock.lo: d-mcu-avr/dmcuavrclock.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='d-mcu-avr/dmcuavrclock.c' object='libdsimmodels_la-dmcuavrclock.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -c -o libdsimmodels_la-dmcuavrclock.lo `test -f 'd-mcu-avr/dmcuavrclock.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrclock.c
+
+libdsimmodels_la-dmcuavrevent.lo: d-mcu-avr/dmcuavrevent.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -MT libdsimmodels_la-dmcuavrevent.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Tpo" -c -o libdsimmodels_la-dmcuavrevent.lo `test -f 'd-mcu-avr/dmcuavrevent.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrevent.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Tpo" "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-dmcuavrevent.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='d-mcu-avr/dmcuavrevent.c' object='libdsimmodels_la-dmcuavrevent.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -c -o libdsimmodels_la-dmcuavrevent.lo `test -f 'd-mcu-avr/dmcuavrevent.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrevent.c
 
 libdsimmodels_la-dmcuavrmmcus.lo: d-mcu-avr/dmcuavrmmcus.c
 @am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(libdsimmodels_la_CFLAGS) $(CFLAGS) -MT libdsimmodels_la-dmcuavrmmcus.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-dmcuavrmmcus.Tpo" -c -o libdsimmodels_la-dmcuavrmmcus.lo `test -f 'd-mcu-avr/dmcuavrmmcus.c' || echo '$(srcdir)/'`d-mcu-avr/dmcuavrmmcus.c; \
@@ -1975,20 +1994,6 @@ libdsimmodels_la-ddevinit.lo: dev/ddevinit.cxx
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libdsimmodels_la-ddevinit.lo `test -f 'dev/ddevinit.cxx' || echo '$(srcdir)/'`dev/ddevinit.cxx
 
-libdsimmodels_la-ddevstamp.lo: dev/ddevstamp.cxx
-@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libdsimmodels_la-ddevstamp.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-ddevstamp.Tpo" -c -o libdsimmodels_la-ddevstamp.lo `test -f 'dev/ddevstamp.cxx' || echo '$(srcdir)/'`dev/ddevstamp.cxx; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-ddevstamp.Tpo" "$(DEPDIR)/libdsimmodels_la-ddevstamp.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-ddevstamp.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dev/ddevstamp.cxx' object='libdsimmodels_la-ddevstamp.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libdsimmodels_la-ddevstamp.lo `test -f 'dev/ddevstamp.cxx' || echo '$(srcdir)/'`dev/ddevstamp.cxx
-
-libdsimmodels_la-ddevevent.lo: dev/ddevevent.cxx
-@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libdsimmodels_la-ddevevent.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-ddevevent.Tpo" -c -o libdsimmodels_la-ddevevent.lo `test -f 'dev/ddevevent.cxx' || echo '$(srcdir)/'`dev/ddevevent.cxx; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-ddevevent.Tpo" "$(DEPDIR)/libdsimmodels_la-ddevevent.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-ddevevent.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dev/ddevevent.cxx' object='libdsimmodels_la-ddevevent.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libdsimmodels_la-ddevevent.lo `test -f 'dev/ddevevent.cxx' || echo '$(srcdir)/'`dev/ddevevent.cxx
-
 libdsimmodels_la-ddevreset.lo: dev/ddevreset.cxx
 @am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libdsimmodels_la-ddevreset.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-ddevreset.Tpo" -c -o libdsimmodels_la-ddevreset.lo `test -f 'dev/ddevreset.cxx' || echo '$(srcdir)/'`dev/ddevreset.cxx; \
 @am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-ddevreset.Tpo" "$(DEPDIR)/libdsimmodels_la-ddevreset.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-ddevreset.Tpo"; exit 1; fi
@@ -2002,6 +2007,20 @@ libdsimmodels_la-ddevuninit.lo: dev/ddevuninit.cxx
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dev/ddevuninit.cxx' object='libdsimmodels_la-ddevuninit.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libdsimmodels_la-ddevuninit.lo `test -f 'dev/ddevuninit.cxx' || echo '$(srcdir)/'`dev/ddevuninit.cxx
+
+libdsimmodels_la-ddevclock.lo: dev/ddevclock.cxx
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libdsimmodels_la-ddevclock.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-ddevclock.Tpo" -c -o libdsimmodels_la-ddevclock.lo `test -f 'dev/ddevclock.cxx' || echo '$(srcdir)/'`dev/ddevclock.cxx; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-ddevclock.Tpo" "$(DEPDIR)/libdsimmodels_la-ddevclock.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-ddevclock.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dev/ddevclock.cxx' object='libdsimmodels_la-ddevclock.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libdsimmodels_la-ddevclock.lo `test -f 'dev/ddevclock.cxx' || echo '$(srcdir)/'`dev/ddevclock.cxx
+
+libdsimmodels_la-ddevevent.lo: dev/ddevevent.cxx
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libdsimmodels_la-ddevevent.lo -MD -MP -MF "$(DEPDIR)/libdsimmodels_la-ddevevent.Tpo" -c -o libdsimmodels_la-ddevevent.lo `test -f 'dev/ddevevent.cxx' || echo '$(srcdir)/'`dev/ddevevent.cxx; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libdsimmodels_la-ddevevent.Tpo" "$(DEPDIR)/libdsimmodels_la-ddevevent.Plo"; else rm -f "$(DEPDIR)/libdsimmodels_la-ddevevent.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dev/ddevevent.cxx' object='libdsimmodels_la-ddevevent.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libdsimmodels_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libdsimmodels_la-ddevevent.lo `test -f 'dev/ddevevent.cxx' || echo '$(srcdir)/'`dev/ddevevent.cxx
 
 mostlyclean-libtool:
 	-rm -f *.lo
