updated core framework of digital simulator and models

--- a/opendsim-core/models/Makefile.am
+++ b/opendsim-core/models/Makefile.am
@@ -41,6 +41,7 @@ include d-xor/makefile.inc
 include d-and/makefile.inc
 include d-buff/makefile.inc
 include d-mcu-avr/makefile.inc
+include d-lcd8544/makefile.inc
 include dev/makefile.inc
 
 libdsimmodels_la_SOURCES += mdel-parameter.c \
