updating schematic element 'painter'

--- a/opendsim-frontend/devices/Makefile.am
+++ b/opendsim-frontend/devices/Makefile.am
@@ -31,6 +31,9 @@ libdsimdevices_la_SOURCES = \
   vsource-dc/vsource-dc.cxx \
   vsource-dc-0v/vsource-dc-0v.cxx \
   voltprobe/voltprobe.cxx \
+  opamp/opamp.cxx \
+  bjt_pnp/bjt_pnp.cxx \
+  bjt_npn/bjt_npn.cxx \
   atmega164/atmega164.cxx \
   lcdm5110/lcdm5110.cxx
 
