--- a/opendsim-frontend/Makefile.am
+++ b/opendsim-frontend/Makefile.am
@@ -47,6 +47,7 @@ opendsim_SOURCES = \
   elementjoint.cxx \
   elementellipse.cxx \
   elementarc.cxx \
+  elementchord.cxx \
   elementorigin.cxx \
   elementpainter.cxx \
   elementabstractport.cxx \
